[tool.poetry]
name = "codespaces-sandbox"
version = "0.1.0"
description = "GitHub Codespaces sandbox"
authors = ["Citizen Development"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"